<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="MainActivity"
    >
    <item
        android:id="@+id/category_most_popular"
        android:title="@string/category_popular"
        android:orderInCategory="1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/category_top_rated"
        android:title="@string/category_top_rated"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/category_favorite"
        android:title="@string/category_favorite"
        android:orderInCategory="3"
        app:showAsAction="never"
        />
</menu>